# temp_name_engine

./: .gitignore  CMakeLists.txt  LICENSE  main.cc  vcpkg.json
api/: CMakeLists.txt
api/include/: body.h  circle.h  collision_system.h  display.h  friction_system.h  game_engine.h  game_object.h  graphical_shape.h  graphics_manager.h  graphics_renderer.h  imgui_interface.h  planet_system.h  rectangle.h  shape.h  shape_manager.h  trigger_system.h  window.h
api/src/: circle.cc  collision_system.cc  display.cc  friction_system.cc  game_engine.cc  graphical_shape.cc  graphics_manager.cc  graphics_renderer.cc  imgui_interface.cc  planet_system.cc  rectangle.cc  shape.cc  shape_manager.cc  trigger_system.cc
core/: CMakeLists.txt
core/include/: game_engine.h  graphics_renderer.h  window.h
core/include/maths/: matrix2.h  matrix3.h  matrix4.h  vec2.h  vec3.h  vec4.h
core/src/: game_engine.cc  graphics_renderer.cc  window.cc
core/test/: test_matrix2.cc  test_matrix3.cc  test_matrix4.cc  test_vec2.cc  test_vec2.cpp  test_vec3.cc  test_vec3.cpp  test_vec4.cpp
deprecated/: graphics_renderer.cc  graphics_renderer.h  shape.cc  shape.h  window.cc  window.h
lib/: CMakeLists.txt
lib/common/include/: common.h  metrics.h  random.h  timer.h
lib/common/src/: timer.cc
lib/math/include/: four_vec2.h  four_vec3.h  four_vec4.h  matrix2.h  matrix3.h  matrix4.h  quaternion.h  shape.h  vec2.h  vec3.h  vec4.h
lib/math/src/: four_vec2.cc  four_vec3.cc  four_vec4.cc
lib/physics/include/: body.h  collider.h  contact_solver.h  quadtree.h
lib/test/: test_four_vec2.cc  test_four_vec3.cc  test_four_vec4.cc  test_matrix2.cc  test_matrix3.cc  test_matrix4.cc  test_quaternion.cc  test_vec2.cc  test_vec3.cc  test_vec4.cc
libs/: CMakeLists.txt
libs/include/: FPS_counter.h  common.h  random.h  timer.h
libs/include/math/: four_vec2.h  four_vec3.h  four_vec4.h  matrix2.h  matrix3.h  matrix4.h  quaternion.h  shape.h  vec2.h  vec3.h  vec4.h
libs/include/physics/: body.h  collider.h  contact_solver.h  quadtree.h  quadtree2.h
libs/src/: timer.cc
libs/src/math/: four_vec2.cc  four_vec3.cc  four_vec4.cc
libs/src/physics/: quadtree2.cc
libs/test/: test_four_vec2.cc  test_four_vec3.cc  test_four_vec4.cc  test_matrix2.cc  test_matrix3.cc  test_matrix4.cc  test_quaternion.cc  test_vec2.cc  test_vec3.cc  test_vec4.cc
